# spottyfi

./: .gitignore  CONTRACT.md  Cargo.toml  HANDOFF.md  PLAN.md  README.md  TODO.md  flake.nix  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
crates/api/: Cargo.toml
crates/api/src/: cache.rs  client.rs  error.rs  lib.rs  map.rs  metadata.rs  retry.rs  traits.rs
crates/api/src/lastfm/: mod.rs  model.rs  resolve.rs
crates/api/src/lyrics/: cache.rs  lrclib.rs  mod.rs  model.rs  musixmatch.rs  score.rs  spotify_internal.rs
crates/app/: Cargo.toml
crates/app/src/: app.rs  auth_controller.rs  avatar.rs  cli.rs  devices.rs  hotkeys.rs  login.rs  lyrics_prefetch.rs  main.rs  playback_controller.rs  prefetch.rs  settings.rs  transport.rs  ui.rs
crates/app/src/media/: media_keys.rs  mod.rs  mpris.rs  notify.rs  single_instance.rs  tray.rs
crates/app/src/page/: album.rs  artist.rs  browse.rs  cards.rs  category.rs  charts.rs  followed_artists.rs  home.rs  incremental.rs  library.rs  liked.rs  lyrics.rs  made_for_you.rs  mod.rs  new_releases.rs  playlist.rs  promise.rs  recently_played.rs  search.rs  search_load.rs  settings.rs  track_view.rs
crates/app/src/shell/: dock_model.rs  mod.rs  nav.rs  persist.rs  sidebar.rs  tabs.rs
crates/applemusic/: Cargo.toml
crates/applemusic-player/: Cargo.toml
crates/applemusic-player/src/: backend.rs  engine.rs  lib.rs  musickit.rs
crates/applemusic/src/: client.rs  error.rs  lib.rs  model.rs
crates/audio/: Cargo.toml
crates/audio/src/: config.rs  connect.rs  controller.rs  cpal_sink.rs  dsp.rs  engine.rs  error.rs  http_player.rs  lib.rs  playback.rs  queue.rs  sink.rs  spectrum.rs  spotify_backend.rs  state.rs  tap.rs  waveform.rs
crates/auth/: Cargo.toml
crates/auth/src/: callback.rs  config.rs  error.rs  lib.rs  session.rs  storage.rs
crates/cache/: Cargo.toml
crates/cache/migrations/: 0001_initial.sql  0002_playlist_tracks.sql  0003_lyrics.sql  0004_collections.sql
crates/cache/src/: error.rs  freshness.rs  image.rs  lib.rs  metadata.rs  migrations.rs  paths.rs
crates/models/: Cargo.toml
crates/models/src/: id.rs  lib.rs  page.rs  types.rs
crates/sources/: Cargo.toml
crates/sources/src/: apple_music_source.rs  dedup.rs  entity.rs  identity.rs  lib.rs  registry.rs  source.rs  spotify_source.rs  subsonic_source.rs
crates/state/: Cargo.toml
crates/state/src/: activity.rs  lib.rs
crates/subsonic/: Cargo.toml
crates/subsonic/src/: client.rs  error.rs  lib.rs  model.rs
crates/ui/: Cargo.toml
crates/ui/assets/icons/: LICENSE-heroicons
crates/ui/src/: components.rs  fonts.rs  icons.rs  image_loader.rs  lib.rs  scrubber.rs  theme.rs  track_table.rs  visualiser.rs
docs/: architecture.md  auth.md  docking.md  feedback-backlog.md  questions.md  threading.md  ui-reference.md
packaging/: dev.drewett.spottyfi.desktop  dev.drewett.spottyfi.metainfo.xml
packaging/flatpak/: dev.drewett.spottyfi.yml
