[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Kieran Drewett <drewett.kieran@gmail.com>"]
repository = "https://github.com/kierandrewett/spottyfi"
rust-version = "1.95"

[workspace.dependencies]
# Internal crates.
spottyfi-models = { path = "crates/models" }
spottyfi-state = { path = "crates/state" }
spottyfi-api = { path = "crates/api" }
spottyfi-auth = { path = "crates/auth" }
spottyfi-audio = { path = "crates/audio" }
spottyfi-cache = { path = "crates/cache" }
spottyfi-ui = { path = "crates/ui" }

# UI / render loop.
eframe = "0.34"
egui = "0.34"
egui_extras = "0.34"

# Async runtime.
tokio = { version = "1", features = ["full"] }

# Diagnostics.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Errors.
anyhow = "1"
thiserror = "2"

# CLI / serialisation.
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time — matches the version rspotify exposes on its `Token` type.
chrono = "0.4"

# State snapshots read by the UI thread.
arc-swap = "1"

# Authentication: Spotify Web API client + OAuth PKCE flow.
rspotify = { version = "0.16", default-features = false, features = [
    "client-reqwest",
    "reqwest-rustls-tls",
] }

# Refresh / access tokens in the platform keyring. `keyring` 4.x registers a
# platform-native credential store (all OS backends are bundled unconditionally);
# `keyring-core` provides the `Entry` get/set/delete API.
keyring = "4"
keyring-core = "1"

# Local OAuth callback server + system browser.
tiny_http = "0.12"
webbrowser = "1"

# HTTP + image decoding (avatar fetch).
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

[profile.dev]
# librespot + egui are heavy; a touch of optimisation keeps debug builds usable.
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
