[package]
name = "spottyfi-api"
description = "Spotify Web API client for Spottyfi (built on rspotify)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
# The musixmatch lyrics provider (the legitimate, documented lyrics path).
# Off by default — a build without it carries no musixmatch code at all. Needs
# an API key in `SPOTTYFI_MUSIXMATCH_KEY` at run time. See `src/lyrics`.
musixmatch = []

[dependencies]
spottyfi-models = { workspace = true }
spottyfi-auth = { workspace = true }
# The persistent SQLite metadata cache that backs stale-while-revalidate.
spottyfi-cache = { workspace = true }

rspotify = { workspace = true }
# Reads the status code / `Retry-After` header off the `reqwest::Response`
# rspotify carries inside its HTTP error variant, and is the HTTP client for
# the Last.fm module's JSON GETs (`json` feature).
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
# `serde` for the `DeserializeOwned` bound `rspotify::model::Page<T>` requires
# and for the Last.fm response types; `serde_json` parses Last.fm responses.
serde = { workspace = true }
serde_json = { workspace = true }

futures = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
lru = { workspace = true }
rand = { workspace = true }
mockall = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
# Deserialising the rspotify-shaped JSON fixtures in the mapping unit tests.
serde_json = { workspace = true }
