[package]
name = "spottyfi-app"
description = "Spottyfi — a native Rust Spotify client. The application binary."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
default-run = "spottyfi"

[[bin]]
name = "spottyfi"
path = "src/main.rs"

[dependencies]
spottyfi-models.workspace = true
spottyfi-state.workspace = true
spottyfi-api.workspace = true
spottyfi-auth.workspace = true
spottyfi-audio.workspace = true
spottyfi-cache.workspace = true
spottyfi-ui.workspace = true

eframe.workspace = true
egui.workspace = true
egui_extras.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap.workspace = true
serde.workspace = true

tokio.workspace = true
arc-swap.workspace = true
reqwest.workspace = true
image.workspace = true

# One-shot async page loads bridged onto the egui UI thread.
poll-promise.workspace = true
futures.workspace = true

# Dockable tabs and splits — the headline UX feature. 0.19.1 is built against
# egui 0.34; its `serde` feature derives Serialize/Deserialize on `DockState`
# for layout persistence.
egui_dock = { version = "0.19", features = ["serde"] }

# Platform config directory for the persisted layout / settings.
directories = "6"

# RON for the on-disk layout + settings file.
ron = "0.12"
