[package]
name = "spottyfi-app"
description = "Spottyfi — a native Rust Spotify client. The application binary."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
default-run = "spottyfi"

[[bin]]
name = "spottyfi"
path = "src/main.rs"

[dependencies]
spottyfi-models.workspace = true
spottyfi-state.workspace = true
spottyfi-api.workspace = true
spottyfi-auth.workspace = true
spottyfi-audio.workspace = true
spottyfi-cache.workspace = true
spottyfi-ui.workspace = true

eframe.workspace = true
egui.workspace = true
egui_extras.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap.workspace = true
serde.workspace = true

tokio.workspace = true
arc-swap.workspace = true
reqwest.workspace = true
image.workspace = true

# One-shot async page loads bridged onto the egui UI thread.
poll-promise.workspace = true
futures.workspace = true

# Dockable tabs and splits — the headline UX feature. 0.19.1 is built against
# egui 0.34; its `serde` feature derives Serialize/Deserialize on `DockState`
# for layout persistence.
egui_dock = { version = "0.19", features = ["serde"] }

# Platform config directory for the persisted layout / settings.
directories = "6"

# RON for the on-disk layout + settings file.
ron = "0.12"

# Platform integration (Phase 12). Linux-first: MPRIS2 is Linux-only by
# definition; the tray / media-key / notification crates are cross-platform
# abstractions over the Linux/Wayland target.
#
# `mpris-server` publishes the org.mpris.MediaPlayer2 D-Bus interface; it
# re-exports `zbus`, so the single-instance "raise the running window" call
# reuses it rather than adding a second D-Bus dependency.
mpris-server = "0.10"
# System-wide media keys (a fallback for WMs that do not route XF86Audio*
# through MPRIS).
global-hotkey = "0.8"
# The system-tray icon + menu. On Linux this needs GTK + libappindicator.
tray-icon = "0.24"
# GTK, for the dedicated thread the tray icon's event loop runs on.
gtk = "0.18"
# Single-instance lock — a second launch focuses the running window.
single-instance = "0.3"
# Track-change desktop notifications (off by default).
notify-rust = "4"
