[package]
name = "spottyfi-app"
description = "Spottyfi — a native Rust Spotify client. The application binary."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
default-run = "spottyfi"

[[bin]]
name = "spottyfi"
path = "src/main.rs"

# --- Packaging metadata -------------------------------------------------------
#
# AppImage (Linux). `cargo appimage` reads this block, drops the release binary
# and the icon/desktop assets into an AppDir, and runs `appimagetool`.
#   cargo install cargo-appimage      # needs `appimagetool` on PATH
#   cargo appimage --release
# The produced AppImage lands in `target/appimage/`. The icon path is relative
# to this crate; the desktop file at the repo's `packaging/` directory is the
# canonical freedesktop entry installed by every other packaging route.
[package.metadata.appimage]
assets = ["../../packaging/icons/dev.drewett.spottyfi-256.png"]
icon = "../../packaging/icons/dev.drewett.spottyfi-256.png"
auto_link = true
auto_link_exclude_list = [
    "libc.so*",
    "libdl.so*",
    "libpthread.so*",
    "ld-linux*.so*",
    "libGL.so*",
    "libEGL.so*",
    "libvulkan.so*",
]

# macOS .app bundle via `cargo-bundle`. STUB — not a current target; Linux is
# the supported platform. Kept so a future macOS build is a one-liner:
#   cargo install cargo-bundle && cargo bundle --release
[package.metadata.bundle]
name = "Spottyfi"
identifier = "dev.drewett.spottyfi"
icon = ["../../packaging/icons/dev.drewett.spottyfi-512.png"]
category = "Music"
short_description = "A native Rust Spotify client with a docking workspace UI"
copyright = "Copyright (c) 2026 Kieran Drewett. MIT OR Apache-2.0."

# Windows MSI is built with `cargo-wix` (`cargo install cargo-wix`). STUB —
# also not a current target. `cargo wix init` generates `wix/main.wxs`; that
# file is intentionally not committed yet. See README "Packaging".

[dependencies]
spottyfi-models.workspace = true
spottyfi-state.workspace = true
spottyfi-api.workspace = true
spottyfi-auth.workspace = true
spottyfi-audio.workspace = true
spottyfi-cache.workspace = true
spottyfi-ui.workspace = true

eframe.workspace = true
egui.workspace = true
egui_extras.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap.workspace = true
serde.workspace = true

tokio.workspace = true
arc-swap.workspace = true
reqwest.workspace = true
image.workspace = true

# One-shot async page loads bridged onto the egui UI thread.
poll-promise.workspace = true
futures.workspace = true

# Dockable tabs and splits — the headline UX feature. 0.19.1 is built against
# egui 0.34; its `serde` feature derives Serialize/Deserialize on `DockState`
# for layout persistence.
egui_dock = { version = "0.19", features = ["serde"] }

# Platform config directory for the persisted layout / settings.
directories = "6"

# RON for the on-disk layout + settings file.
ron = "0.12"

# Platform integration (Phase 12). Linux-first: MPRIS2 is Linux-only by
# definition; the tray / media-key / notification crates are cross-platform
# abstractions over the Linux/Wayland target.
#
# `mpris-server` publishes the org.mpris.MediaPlayer2 D-Bus interface; it
# re-exports `zbus`, so the single-instance "raise the running window" call
# reuses it rather than adding a second D-Bus dependency.
mpris-server = "0.10"
# System-wide media keys (a fallback for WMs that do not route XF86Audio*
# through MPRIS).
global-hotkey = "0.8"
# The system-tray icon + menu. On Linux this needs GTK + libappindicator.
# `default-features = false` drops the `libxdo` dependency — it only backs the
# predefined Copy/Cut/Paste menu items, which Spottyfi's tray menu does not
# use — so the build needs no `libxdo` dev package.
tray-icon = { version = "0.24", default-features = false, features = ["gtk"] }
# GTK, for the dedicated thread the tray icon's event loop runs on.
gtk = "0.18"
# Single-instance lock — a second launch focuses the running window.
single-instance = "0.3"
# Track-change desktop notifications (off by default).
notify-rust = "4"
