[package]
name = "spottyfi-audio"
description = "librespot wrapper and playback state machine for Spottyfi."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
# The default audio backend. librespot's `rodio` backend goes through ALSA on
# Linux (and the ALSA shim on PipeWire); it is the only backend Phase 2 wires.
# `rustls-tls-native-roots` keeps librespot's TLS on rustls, matching the rest
# of the workspace (reqwest, rspotify) rather than pulling in native-tls.
default = ["rodio-backend"]
rodio-backend = ["librespot/rodio-backend", "librespot/rustls-tls-native-roots"]

[dependencies]
spottyfi-models = { workspace = true }
spottyfi-auth = { workspace = true }

# librespot: audio streaming + Spotify session. `default-features = false`
# drops the discovery/Connect mDNS stack and every bundled audio backend; the
# `rodio-backend` feature above opts the chosen one back in.
librespot = { version = "0.8", default-features = false }

tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
arc-swap = { workspace = true }
rand = { workspace = true }
