[package]
name = "spottyfi-audio"
description = "librespot wrapper and playback state machine for Spottyfi."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
# `rustls-tls-native-roots` keeps librespot's TLS on rustls, matching the rest
# of the workspace (reqwest, rspotify) rather than pulling in native-tls.
default = ["rustls-tls"]
rustls-tls = ["librespot/rustls-tls-native-roots"]

[dependencies]
spottyfi-models = { workspace = true }
spottyfi-auth = { workspace = true }

# librespot: audio streaming + Spotify session. `default-features = false`
# drops the discovery/Connect mDNS stack and every bundled audio backend —
# Spottyfi supplies its own output sink (`crate::cpal_sink`).
librespot = { version = "0.8", default-features = false }

# cpal: the cross-platform audio device layer. Spottyfi drives it directly
# (see `crate::cpal_sink`) instead of librespot's buffered `rodio` backend,
# for low, fixed output latency and an instant pause.
cpal = "0.16"

tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
arc-swap = { workspace = true }
rand = { workspace = true }

# FFT for the WS7 spectrum-analyser visualiser. The analyser task computes the
# magnitude spectrum off the UI thread; see `crate::spectrum`.
rustfft = { workspace = true }

# Pure-Rust Ogg Vorbis decoder, used by `crate::waveform` to decode a whole
# track off-thread and build the full-song waveform envelope.
lewton = "0.10"
