[package]
name = "spottyfi-auth"
description = "OAuth PKCE flow, token refresh and keyring storage for Spottyfi."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
spottyfi-models.workspace = true

rspotify.workspace = true
keyring.workspace = true
keyring-core.workspace = true
tiny_http.workspace = true
webbrowser.workspace = true
tokio.workspace = true
arc-swap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
