[package]
name = "spottyfi-subsonic"
description = "OpenSubsonic API client for Spottyfi."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Subsonic token auth is `md5(password + salt)`; `hex` renders the digest and
# the random salt as lowercase hex.
md-5 = "0.10"
hex = "0.4"
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
